# analisi

./: CMakeLists.txt  LEGGIMI.txt  Mpi.cpp  Mpi.h  README.md  README_.md  associatedlegendrepoly.cpp  associatedlegendrepoly.h  atomicdensity.cpp  atomicdensity.h  build_pdf.sh  calc_buffer.h  calcolamultithread.cpp  calcolamultithread.h  calcoliblocchi.cpp  calcoliblocchi.h  centerdiff.cpp  centerdiff.h  centerofmassdiff.cpp  centerofmassdiff.h  cepstral.cpp  cepstral.h  chargefluxts.cpp  chargefluxts.h  config.h  config.h.in  convertibinario.cpp  convertibinario.h  convolution.cpp  convolution.h  correlatorespaziale.cpp  correlatorespaziale.cpp_copia  correlatorespaziale.cpp_davide  correlatorespaziale.cpp_riccardo  correlatorespaziale.h  cp2analisi.py  cronometro.C  cronometro.h  doubleround.cpp  doubleround.h  (+55 more)
.github/workflows/: cmake.yml
analisi/: main.cpp
boost/: CMakeLists.txt  README.md
build-analisi-Desktop-Default/: config.h
build-analisi-Desktop-Minimum Size Release/: config.h
install/: install_python.sh  install_test.sh
lib/include/: Skt.h  atomicdensity.h  basetrajectory.h  blockaverage.h  buffer_utils.h  calc_buffer.h  calcolamultithread.h  calcoliblocchi.h  calculatemultithread.h  centerdiff.h  centerofmassdiff.h  chargefluxts.h  compiler_types.h  convolution.h  correlatorespaziale.h  cronometro.h  eigen_include.h  floating_exceptions.h  gofrt.h  greenkubo2componentionicfluid.h  greenkuboNcomponentionicfluid.h  heatc.h  heatfluxts.h  istogrammaatomiraggio.h  istogrammavelocita.h  lammps_struct.h  macros.h  mediablocchi.h  modivibrazionali.h  mp.h  msd.h  neighbour.h  operazionisulista.h  posizioniequilibrio.h  readlog.h  restrict.h  specialfunctions.h  spettrovibrazionale.h  sphericalbase.h  sphericalcorrelations.h  (+8 more)
lib/src/: Skt.cpp  atomicdensity.cpp  basetrajectory.cpp  centerdiff.cpp  centerofmassdiff.cpp  chargefluxts.cpp  convertibinario.cpp  convolution.cpp  correlatorespaziale.cpp  cronometro.C  doubleround.cpp  gofrt.cpp  greenkubo2componentionicfluid.cpp  greenkuboNcomponentionicfluid.cpp  heatc.cpp  heatfluxts.cpp  interpolator.cpp  istogrammaatomiraggio.cpp  istogrammavelocita.cpp  modivibrazionali.cpp  msd.cpp  neighbour.cpp  operazionisulista.cpp  posizioniequilibrio.cpp  readlog.cpp  readlog_numpy.cpp  specialfunctions.cpp  spettrovibrazionale.cpp  sphericalbase.cpp  sphericalcorrelations.cpp  steinhardt.cpp  testtraiettoria.cpp  traiettoria.cpp  traiettoria_numpy.cpp  traiettoriabase.cpp  trajectory.cpp  trajectory_numpy.cpp
libcg/: CMakeLists.txt  cg.h  function.h  lineminimizations.h  newton.h  test.cpp
notebooks/: calc_inspector.ipynb  common.py  example2.ipynb
program_options/: .CMakeLists.txt.swp  CMakeLists.txt
pyanalisi/: __init__.py  analysis.py  common.py  plotters.py  trajectory.py
pyanalisi/src/: pyanalisi.cpp
tests/: _test.py  conftest.py  test_cli.sh  test_gk.py  test_gofrt.py  test_msd.py  test_notebook.py  test_sh.py  test_sh_correlation_nh3.ipynb  test_sphericalHarmonics.py  test_vdos.py  test_write_binary.py  utilfunc.py
tests/cpp_regression_data/: gofr_1a1  gofr_1a4  gofr_1b4  gofr_3b4  min_image  msd_4a  msd_4b  pbc_1  pbc_2
tests/cpp_regression_data/ad/: test_calcola_0  test_calcola_1
tests/cpp_regression_data/gk/: gk_2comp
tests/cpp_regression_data/sh/: test_calcola  test_single_snapshot
tests/cpp_regression_data/sh_stein/: test_calcola  test_calcola_skip  test_calcola_tr_neigh
tests/data/: 10steps.cel  10steps.pos  10steps.species  10steps.vel  MEMENTO  cells.npy
tests/data/cli/: GK_heat_double  GK_heat_single  MSD_cm  MSD_cm_reference  MSD_normal  MSD_normal_full  neighbours  pair_corr_no_t  pair_corr_t  spherical_harm  vel_histogram  vel_histogram_def  vibrational
tests/src/: all_tests.cpp  test_calc_buffer.cpp  test_double_loop_splitter.cpp  test_fixtures.h  test_gk.cpp  test_lammps2020.cpp  test_position_histogram.cpp  test_sh.cpp  test_trajectory.cpp
tests/test_gk/: test_gk.csv
tests/test_gofrt/: test_gofr.csv
tests/test_msd/: test_gofr.csv  test_msd.csv
tests/test_notebook/: test_density.csv  test_gofr.csv  test_sh.csv
tests/test_sh/: test_sh.csv
tests/test_vdos/: test_vdos.csv
tests/test_write_binary/: test_cp2analisi.csv  test_lammps2analisi.csv
tools/: Dockerfile  README  cp2analisi.py  lammps2analisi.py  readcp.py  readlammpsdump.py
tools/cp/: water125_testanalisi.cel  water125_testanalisi.evp  water125_testanalisi.pos  water125_testanalisi.species  water125_testanalisi.vel
tools/lammps/: dump.lammpstrj
xdrfile-1.1.4/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  config.sub  configure  configure.ac
xdrfile-1.1.4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
xdrfile-1.1.4/include/: Makefile.in
xdrfile-1.1.4/src/: Makefile.am  Makefile.in
xdrfile-1.1.4/src/python/: Makefile.am  Makefile.in  sample.py  xdrfile.py  xdrfile_test.py
